--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -100,6 +100,16 @@
                     </to>
                 </configuration>
             </plugin>
+             <plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.2</version>
+				<configuration>
+					<to>
+						<image>sku304/${project.artifactId}</image>
+					</to>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
