added new stage for code quality check using sonar

--- a/cicd/ci/jenkinsfile
+++ b/cicd/ci/jenkinsfile
@@ -79,6 +79,23 @@ pipeline {
                 }
             }
         }
+       
+        stage('Code Analysis') {
+            steps {
+                script {
+                    withSonarQubeEnv('SonarQube') {
+                        sh './gradlew sonar -Dsonar.login=$SONAR_AUTH_TOKEN'
+                    }
+
+                    def qualityGate = waitForQualityGate()
+                    if (qualityGate.status != 'OK') {
+                        error "SonarQube Quality Gate failed: ${qualityGate.status}"
+                    } else {
+                        echo "SonarQube Quality Gate passed."
+                    }
+                }
+            }
+        }
 
         stage('Jib Build and Push') {
             parallel {
