modified accounts, loans and cards and added plugin related to sonar for code quality and jococo for report

--- a/cicd/ci/jenkinsfile
+++ b/cicd/ci/jenkinsfile
@@ -83,7 +83,7 @@ pipeline {
         stage('Code Analysis') {
             steps {
                 script {
-                    withSonarQubeEnv('SonarQube') {
+                    withSonarQubeEnv('Sonarqube') {
                         sh './gradlew sonar -Dsonar.login=$SONAR_AUTH_TOKEN'
                     }
 
