--- a/cicd/ci/jenkinsfile
+++ b/cicd/ci/jenkinsfile
@@ -84,7 +84,8 @@ pipeline {
             steps {
                 script {
                     withSonarQubeEnv('sonarqube') {
-                        sh "mvn clean verify sonar:sonar -Dsonar.login=${SONAR_AUTH_TOKEN}"
+                        
+                        sh 'mvn clean verify sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN'
                     }
 
                     def qualityGate = waitForQualityGate()
