--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>cards</name>
-	<description>Microservice for Cards</description>
+	<description>Microservice API for Cards</description>
 	<url />
 	<licenses>
 		<license />
